--- a/template/parcel-ts-react/package.json
+++ b/template/parcel-ts-react/package.json
@@ -99,7 +99,5 @@
     "stylelint-declaration-block-no-ignored-properties": "2.3.0",
     "typescript": "4.0.3"
   },
-  "files": [
-    "dist"
-  ]
+  {{{files}}}
 }
