--- a/template/parcel-ts-react/package.json
+++ b/template/parcel-ts-react/package.json
@@ -35,7 +35,7 @@
     "prettier": "prettier -c --write \"**/*\"",
     "release": "git fetch --tags && npx standard-version",
     "release:alpha": "{{manage}} run release -- --prerelease alpha",
-    "commit": "lint-staged && npx git-cz --no-verify",
+    "commit": "lint-staged && npx git-cz",
     "prepublishOnly": "run-s lint test build",
     "install-peers": "npm-install-peers"
   },
