--- a/template/parcel-ts-react/package.json
+++ b/template/parcel-ts-react/package.json
@@ -89,6 +89,7 @@
     "npm-install-peers": "1.2.1",
     "npm-run-all": "4.1.5",
     "parcel-bundler": "1.12.4",
+    "parcel-plugin-less-js-enabled":"^1.0.2",
     "postcss-modules": "3.2.2",
     "prettier": "2.1.2",
     "stylelint": "^13.0.0",
