--- a/template/parcel-ts-react/tsconfig.json
+++ b/template/parcel-ts-react/tsconfig.json
@@ -9,7 +9,8 @@
     "moduleResolution": "node",
     "target": "es5",
     "allowJs": true,
-    "jsx": "react"
+    "jsx": "react",
+    "allowSyntheticDefaultImports":true
   },
   "include": ["./src/**/*"]
 }
