--- a/template/parcel-ts-react/package.json
+++ b/template/parcel-ts-react/package.json
@@ -29,7 +29,7 @@
     "lint-staged:js": "eslint --fix --cache --ext .ts,.tsx ./src",
     "lint:js": "eslint --fix --cache --ext .ts,.tsx ./src",
     "lint:prettier": "prettier --check --write \"**/*\" --end-of-line auto",
-    "lint:style": "stylelint --fix \"src/**/*.less\" --syntax less",
+    "lint:style": "stylelint --aei --fix \"src/**/*.less\" --syntax less",
     "start-w": "microbundle-crl watch --no-compress --format modern,cjs",
     "build": "microbundle-crl --no-compress --format modern,cjs",
     "prettier": "prettier -c --write \"**/*\"",
