feat: proxy server support

--- a/template/parcel-ts-react/package.json
+++ b/template/parcel-ts-react/package.json
@@ -24,6 +24,7 @@
     "clean": "rm dist/bundle.js",
     "clean-build": "rm build/*",
     "start": "parcel example/index.html --out-dir ./build",
+    "start:proxy": "node ./scripts/proxy-server.js",
     "build-example": "parcel build example/index.html --out-dir ./build",
     "build-prod": "run-s clean-build build-example",
     "test": "jest --coverage",
@@ -92,6 +93,7 @@
     "npm-run-all": "4.1.5",
     "parcel-bundler": "1.12.4",
     "parcel-plugin-less-js-enabled":"^1.0.2",
+    "parcel-proxy-server": "1.1.0",
     "postcss-modules": "3.2.2",
     "prettier": "2.1.2",
     "stylelint": "^13.0.0",
