--- a/template/parcel-ts-react/package.json
+++ b/template/parcel-ts-react/package.json
@@ -31,7 +31,7 @@
     "lint": "run-s lint:js lint:style lint:prettier",
     "lint-staged:js": "eslint --fix --cache --ext .ts,.tsx ./src",
     "lint:js": "eslint --fix --cache --ext .ts,.tsx ./src",
-    "lint:prettier": "prettier --check --write \"**/*\" --end-of-line auto",
+    "lint:prettier": "prettier --check --write \"**/*.{tsx,ts,less,md,json}\" --end-of-line auto",
     "lint:style": "stylelint --aei --fix \"src/**/*.less\" --syntax less",
     "start-w": "microbundle-crl watch --no-compress --format modern,cjs --sourcemap",
     "build": "microbundle-crl --no-compress --format modern,cjs",
